# django-deploy-cli

./: .env-deployment  README.md  pyproject.toml
django_deploy_cli/: main.py
django_deploy_cli/services/: constants.py  debian.py  django.py  firewall.py  git.py  groups.py  gunicorn.py  nginx.py  postgres.py  users.py  utils.py
django_deploy_cli/services/templates/: env-deployment  env-production  gunicorn.service  gunicorn.socket  nginx.conf
tests/: test_django_deploy_cli.py
